bank-project/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stanley-bank-server-service
  namespace: default
  labels:
    app: stanley-bank-server
spec:
  type: ClusterIP
  selector:
    app: stanley-bank-server
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 5000
