bank-project/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stanley-bank-service
  namespace: default
  labels:
    app: stanley-bank
spec:
  type: ClusterIP
  selector:
    app: stanley-bank
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3000
