bank-project/backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stanley-bank-backend-ingress
  namespace: default
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-2:178220402760:certificate/6871e6a3-1c80-4e95-b775-4bec6f99dc07
spec:
  ingressClassName: alb
  rules:
    - host: api.stanleybank.site
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: stanley-bank-server-service
                port:
                  number: 80
